# Lasagna

./: .gitignore  INSTALL_LASAGNA.cmd  README.md  UNINSTALL_LASAGNA.cmd  pyproject.toml  requirements-dev.txt  requirements-runtime.txt
.github/: copilot-instructions.md
.github/governance/: supportability.yml
.github/workflows/: codeql.yml  supportability-enforcement.yml  validation.yml
docs/: governance-canary-2026-06-29.md  governance-canary-f3a6260.md  route_sorting_no_heuristics_audit.md  source-contract.md
docs/ai_handoffs/: INCA_SRC_EVIDENCE_HANDOFF.md
docs/contracts/: BOUNDED_JSON_EVIDENCE_SNAPSHOT_CONTRACT.md  INCA_SRC_EVIDENCE_STATUS_CONTRACT.md
docs/reference/: supportability-standard.md
docs/runbooks/: BOUNDED_JSON_EVIDENCE_SNAPSHOT_PROTOCOL.md  INCA_SRC_EVIDENCE_FRAMEWORK.md
scripts/quality_gates/: check_lasagna_supportability.py  check_repo_hygiene.py  check_sql_supportability.py  run_local_validation.py  verify_full_route_workbook.py
scripts/work_pc/: audit_lasagna_package.ps1  build_lasagna_package.ps1  collect_inca_src_evidence.py  (+4 more)
tests/: test_combined_parser.py  test_combined_results.py  test_full_route_workbook_verifier.py  test_inca_src_discovery.py  test_installer_scripts.py  test_live_batch.py  test_quality_gate.py  test_repo_hygiene.py  test_route_adapter.py  test_route_contract.py  test_route_rows.py  test_route_sorting_route_order_fallback.py  test_service_ids.py  test_snowflake_export.py  test_sql_supportability_gate.py  test_sql_template.py  test_workbook_names.py  test_workbook_paths.py  test_workbook_writer.py
(+78 files in other folders)
