[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasagna"
version = "0.1.0"
description = "Admin-free IC/ICB route workbook generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.0",
  "snowflake-connector-python>=3.17.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = ["src", "scripts", "tests"]
pretty = true
show_error_codes = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "snowflake.*"]
ignore_missing_imports = true
